--- a/Uebung2/NN/hl.html
+++ b/Uebung2/NN/hl.html
@@ -2,12 +2,13 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Übung 2 - Rabyz Hassan Nejad</title>
+    <title>Uebung 2 - Rabiye Hassan Nejad</title>
 </head>
 <body>
 <header>
     <h1>Teinehmer_innen WebTech</h1>
     <img src="../../images/fiw.jpg" alt = "FIW-Logo" style="width:53px; height=48px;">
+    <link href="../../styles/mystyles.css" rel="stylesheet">
 </header>
 
 <nav>
