--- a/Uebung2/NN/sz.html
+++ b/Uebung2/NN/sz.html
@@ -1,13 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Übung 2 - Rabiye Hassan Nejad </title>
+    <title>Uebung 2 - Rabiye Hassan Nejad </title>
 </head>
 <body>
 <header>
     <h1>Teinehmer_innen WebTech</h1>
     <img src="../../images/fiw.jpg" alt = "FIW-Logo" style="width:53px; height=48px;">
+    <link href="../../styles/mystyles.css" rel="stylesheet">
 </header>
 
 <nav>
