--- a/Uebung2/uebung2.html
+++ b/Uebung2/uebung2.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Uebung2- Rabiye Hassan Nejad</title>
-    <link href="./styles/mystyles.css" rel="stylesheet">
+    <link href="../styles/mystyles.css" rel="stylesheet">
 
 </head>
 <body>
 <header>
     <h1>Teinehmer_innen WebTech</h1>
-    <img scr=../image/fiw.jpg" alt="HTW Logo" style="width:53px; height=48px;"/>
+    <img src="../image/fiw.jpg" alt="HTW Logo" style="width:53px; height=48px;"/>
 </header>
 
 <nav>
-    <a href= "./uebung1.html"> ALLE</a>
+    <a href= "./uebung2.html"> ALLE</a>
     <a href= "./NN/ag.html"> A - G  </a>
     <a href= "./NN/hl.html"> H - L  </a>
     <a href= "./NN/mr.html"> M - R  </a>
